--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.12",
+    "gsap": "^3.13.0",
     "lucide": "^0.542.0",
     "lucide-react": "^0.542.0",
     "react": "^18.3.1",
